--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
       <ul>
         <li class="important">クワトロ対戦オセロ</li>
         <li>代表作。４人でオセロをする。</li>
-        <li>バグり散らかしたりオンライン対戦を</li>
-        <li>所望されているのでリメイクするかも</li>
-        <li>(学校で掲示された新聞は後に</li>
-        <li>ゴミ箱となった…K木先生…)</li>
+        <li>バグり散らかしたりオンライン対戦を所望されているのでリメイクするかも</li>
+        <li>(学校で掲示された新聞は後にゴミ箱となった…K木先生…)</li>
       </ul>
     </section>
 
@@ -44,7 +42,7 @@
         <li class="important">４人用オセロリメイク</li>
         <li>　問題点の解決＆ストーリーモード・オンラインモードの追加</li>
         <li　class="important">ロボコン全国進出</li>
-        <li>　自分一人で成し遂げることはできないが、</li>
+        <li>　自分一人で成し遂げることはできないが、頑張る</li>
       </ul>
     </section>
   </main>
