UpdateHtmlVer.2(connect to style.css)

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<html>
-
 <head>
+  <meta charset="utf-8">
   <title>MY SITE</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
   <ul class="headInfo">
     <li>HOME</li>
     <a href="https://scratch.mit.edu/users/fabnir/">My Account</a>
