--- a/index.html
+++ b/index.html
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <title>MY SITE</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>MY SITE</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
-  <ul class="headInfo">
-    <li>HOME</li>
-    <a href="https://scratch.mit.edu/users/fabnir/">My Account</a>
-    <a href="https://thwoo.party/">Thwoo Party</a>
-  </ul>
-</head>
+  <body>
+    <h1>FABNIR`s SITE</h1>
+    <main>
+      <header>
+        <ul class="headInfo">
+          <li>HOME</li>
+          <a href="https://scratch.mit.edu/users/fabnir/">My Account</a>
+          <a href="https://thwoo.party/">Thwoo Party</a>
+        </ul>
+      </header>
+        
+        <section>
+        <h2>About Me</h2>
+        <ul>
+          <li class="important">個人情報</li>
+          <li>山口県防府市〇〇町〇〇〇〇</li>
+          <li>誕生日　2009/11/17（15歳）</li>
+          <li class="important">経歴</li>
+          <li>防府市立華浦小学校卒</li>
+          <li>防府市立桑山中学校そろそろ卒</li>
+          <li>徳山工業高等専門学校進学(4月)</li>
+        </ul>
+      </section>
 
-<body>
-  <h1>FABNIR`s SITE</h1>
-  <main>
+      <section>
+        <h2>My Product</h2>
+        <ul>
+          <li class="important">クワトロ対戦オセロ</li>
+          <li>代表作。４人でオセロをする。</li>
+          <li>
+            バグり散らかしたりオンライン対戦を所望されているのでリメイクするかも
+          </li>
+          <li>(学校で掲示された新聞は後にゴミ箱となった…K木先生…)</li>
+        </ul>
+      </section>
 
-    <section>
-      <h2>About Me</h2>
-      <ul>
-        <li class="important">個人情報</li>
-        <li>山口県防府市〇〇町〇〇〇〇</li>
-        <li>誕生日　2009/11/17（15歳）</li>
-        <li class="important">経歴</li>
-        <li>防府市立華浦小学校卒</li>
-        <li>防府市立桑山中学校そろそろ卒</li>
-        <li>徳山工業高等専門学校進学(4月)</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>My Product</h2>
-      <ul>
-        <li class="important">クワトロ対戦オセロ</li>
-        <li>代表作。４人でオセロをする。</li>
-        <li>バグり散らかしたりオンライン対戦を所望されているのでリメイクするかも</li>
-        <li>(学校で掲示された新聞は後にゴミ箱となった…K木先生…)</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Future Goals</h2>
-      <ul>
-        <li class="important">４人用オセロリメイク</li>
-        <li>　問題点の解決＆ストーリーモード・オンラインモードの追加</li>
-        <li　class="important">ロボコン全国進出</li>
-        <li>　自分一人で成し遂げることはできないが、頑張る</li>
-      </ul>
-    </section>
-  </main>
-</body>
-
+      <section>
+        <h2>Future Goals</h2>
+        <ul>
+          <li class="important">４人用オセロリメイク</li>
+          <li>問題点の解決＆ストーリーモード・オンラインモードの追加</li>
+          <li class="important">ロボコン全国進出</li>
+          <li>自分一人で成し遂げることはできないが、頑張る</li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
