--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
   <body>
     <header>
+      <div class="header-contents">
       <ul class="headInfo">
         <li>HOME</li>
         <a href="https://scratch.mit.edu/users/fabnir/">My Account</a>
         <a href="https://thwoo.party/">Thwoo Party</a>
       </ul>
+      </div>
     </header>
     <main>
       <h1>FABNIR`s SITE</h1>
