--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8" />
     <title>MY SITE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <header>
       <div class="header-contents">
-      <ul class="headInfo">
-        <li>HOME</li>
-        <a href="https://scratch.mit.edu/users/fabnir/">My Account</a>
-        <a href="https://thwoo.party/">Thwoo Party</a>
-      </ul>
+        <ul class="headInfo">
+          <li>HOME</li>
+          <a href="https://scratch.mit.edu/users/fabnir/">My Account</a>
+          <a href="https://thwoo.party/">Thwoo Party</a>
+        </ul>
       </div>
     </header>
     <main>
@@ -23,21 +23,21 @@
       <section>
         <h2>About Me</h2>
         <div class="container">
-        <div>
-          <h3 class="important">個人情報</h3>
-          <ul>
-            <li>山口県防府市〇〇町〇〇〇〇</li>
-            <li>誕生日　2009/11/17（15歳）</li>
-          </ul>
-        </div>
-        <div>
-          <h3 class="important">経歴</h3>
-          <ul>
-            <li>防府市立華浦小学校卒</li>
-            <li>防府市立桑山中学校そろそろ卒</li>
-            <li>徳山工業高等専門学校進学(4月)</li>
-          </ul>
-        </div>
+          <div>
+            <h3 class="important">個人情報</h3>
+            <ul>
+              <li>山口県防府市〇〇町〇〇〇〇</li>
+              <li>誕生日　2009/11/17（15歳）</li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="important">経歴</h3>
+            <ul>
+              <li>防府市立華浦小学校卒</li>
+              <li>防府市立桑山中学校そろそろ卒</li>
+              <li>徳山工業高等専門学校進学(4月)</li>
+            </ul>
+          </div>
         </div>
       </section>
 
