--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body>
     <header>
       <div class="header-contents">
+        <div>HOME</div>
         <ul class="headInfo">
-          <li>HOME</li>
-          <a href="https://scratch.mit.edu/users/fabnir/">My Account</a>
-          <a href="https://thwoo.party/">Thwoo Party</a>
+          <li><a href="https://scratch.mit.edu/users/fabnir/">My Account</a></li>
+          <li><a href="https://thwoo.party/">Thwoo Party</a></li>
         </ul>
       </div>
     </header>
