--- a/index.html
+++ b/index.html
@@ -1,87 +1,96 @@
 <!DOCTYPE html>
 <html lang="ja">
 
+
 <head>
-  <meta charset="utf-8" />
-  <title>MY SITE</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
+ <meta charset="utf-8" />
+ <title>MY SITE</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1" />
+ <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
+ <link rel="stylesheet" href="css/style.css" />
 </head>
 
 
+
+
 <body>
-  <header>
-    <div class="header-contents">
-      <div>HOME</div>
-      <ul class="headInfo">
-        <li>
-          <a href="https://scratch.mit.edu/users/fabnir/" target="_blank">My Account</a>
-          
-        </li>
-        <li>
-          <a href="https://thwoo.party/">
-            <img src="https://thwoo.party/img/nav/logo-white.svg" alt="Thwoo Party">
-          </a>
-
-        </li>
-      </ul>
-    </div>
-  </header>
-  <main>
-    <h1>FABNIR`s SITE</h1>
-    <section>
-      <h2>About Me</h2>
-      <div class="container">
-        <div>
-          <h3 class="important">個人情報</h3>
-          <ul>
-            <li>山口県防府市〇〇町〇〇〇〇</li>
-            <li>誕生日　2009/11/17（15歳）</li>
-          </ul>
-        </div>
-        <div>
-          <h3 class="important">経歴</h3>
-          <ul>
-            <li>防府市立華浦小学校卒</li>
-            <li>防府市立桑山中学校そろそろ卒</li>
-            <li>徳山工業高等専門学校進学(4月)</li>
-          </ul>
-        </div>
-      </div>
-    </section>
+ <header>
+   <div class="header-contents">
+     <div>HOME</div>
+     <ul class="headInfo">
+       <li>
+         <a href="https://scratch.mit.edu/users/fabnir/" target="_blank">My Account</a>
+        
+       </li>
+       <li>
+         <a href="https://thwoo.party/">
+           <img class="buttonImg" src="https://thwoo.party/img/nav/logo-white.svg" alt="Thwoo Party">
+         </a>
 
 
-    <section>
-      <h2>About Me</h2>
-      <div class="container">
-        <div>
-          <h3 class="important">クワトロ対戦オセロ</h3>
-          <ul>
-            <li>私の代表作</li>
-            <li>4人でオセロをする</li>
-            <li>要改善箇所が多く、リメイクするかも</li>
-            <iframe src="https://scratch.mit.edu/projects/666771686/embed" allowtransparency="true" width="485"
-              height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-          </ul>
-        </div>
+       </li>
+     </ul>
+   </div>
+ </header>
+ <main>
+   <h1>FABNIR`s SITE</h1>
+   <section>
+     <h2>About Me</h2>
+     <div class="container">
+       <div>
+         <h3 class="important">個人情報</h3>
+         <ul>
+           <li>山口県防府市〇〇町〇〇〇〇</li>
+           <li>誕生日　2009/11/17（15歳）</li>
+         </ul>
+       </div>
+       <div>
+         <h3 class="important">経歴</h3>
+         <ul>
+           <li>防府市立華浦小学校卒</li>
+           <li>防府市立桑山中学校そろそろ卒</li>
+           <li>徳山工業高等専門学校進学(4月)</li>
+         </ul>
+       </div>
+     </div>
+   </section>
 
 
-    </section>
-    <section>
-      <h2>About Me</h2>
-      <div class="container">
-        <div>
-          <h3 class="important">FUTURE GOALS</h3>
-          <ul>
-            <li class="important">４人用オセロリメイク</li>
-            <li>問題点の解決＆ストーリーモード・オンラインモードの追加</li>
-            <li class="important">ロボコン全国進出</li>
-            <li>自分一人で成し遂げることはできないが、頑張る</li>
-          </ul>
-        </div>
-    </section>
-  </main>
+
+
+   <section>
+     <h2>About Me</h2>
+     <div class="container">
+       <div>
+         <h3 class="important">クワトロ対戦オセロ</h3>
+         <ul>
+           <li>私の代表作</li>
+           <li>4人でオセロをする</li>
+           <li>要改善箇所が多く、リメイクするかも</li>
+           <iframe src="https://scratch.mit.edu/projects/666771686/embed" allowtransparency="true" width="485"
+             height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+         </ul>
+       </div>
+
+
+
+
+   </section>
+   <section>
+     <h2>About Me</h2>
+     <div class="container">
+       <div>
+         <h3 class="important">FUTURE GOALS</h3>
+         <ul>
+           <li class="important">４人用オセロリメイク</li>
+           <li>問題点の解決＆ストーリーモード・オンラインモードの追加</li>
+           <li class="important">ロボコン全国進出</li>
+           <li>自分一人で成し遂げることはできないが、頑張る</li>
+         </ul>
+       </div>
+   </section>
+ </main>
 </body>
+
 
 </html>
