--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ja">
 
 
+
+
 <head>
  <meta charset="utf-8" />
  <title>MY SITE</title>
@@ -9,10 +11,6 @@
  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
  <link rel="stylesheet" href="css/style.css" />
 </head>
-
-
-
-
 <body>
  <header>
    <div class="header-contents">
@@ -20,14 +18,13 @@
      <ul class="headInfo">
        <li>
          <a href="https://scratch.mit.edu/users/fabnir/" target="_blank">My Account</a>
-        
+
+
        </li>
        <li>
          <a href="https://thwoo.party/">
            <img class="buttonImg" src="https://thwoo.party/img/nav/logo-white.svg" alt="Thwoo Party">
          </a>
-
-
        </li>
      </ul>
    </div>
@@ -54,10 +51,6 @@
        </div>
      </div>
    </section>
-
-
-
-
    <section>
      <h2>About Me</h2>
      <div class="container">
@@ -71,10 +64,7 @@
              height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
          </ul>
        </div>
-
-
-
-
+     </div>
    </section>
    <section>
      <h2>About Me</h2>
@@ -88,9 +78,9 @@
            <li>自分一人で成し遂げることはできないが、頑張る</li>
          </ul>
        </div>
+     </div>
    </section>
  </main>
 </body>
-
-
 </html>
+
